@@ -12,6 +12,7 @@ struct sockaddr_in {
 };
 
 #define INADDR_ANY	((unsigned long int) 0x00000000)
+#define PORT_ANY	((unsigned int) 0x0000)
 #define INADDR_NODE	0xffffffff
 #define INADDR_LOOPBACK	0x7f000001
 
