@@ -6,6 +6,10 @@ format provided for each entry.
 Al
 ------------------------------------------------------------------------------
 
+
+Sun Jul 01 16:49:34 GMT 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
+	* Added inet_select()
+
 Fri Jun 29 17:05:39 GMT 2001	Riley Williams <rhw@memalpha.cx>
 	* Add CONFIG_EXPERIMENTAL, CONFIG_OBSOLETE and CONFIG_NOT_YET to
 	  Documentation/Configure.help and arch/i86/config.in files ready
